<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">安于心理财</string>
    <string name="action_settings">Settings</string>
    <string name="tab_home">理财精选</string>
    <string name="tab_produce_list">产品列表</string>
    <string name="product_loans">稳盈贷</string>
    <string name="product_coins">货币基金</string>
    <string name="product_others">其他产品</string>
    <string name="tab_mine">我的资产</string>
    <string name="tab_more">更多服务</string>
    <string name="more_action_center">活动中心</string>
    <string name="more_message_center">消息中心</string>
    <string name="more_appeal_center">账号申诉</string>
    <string name="more_help_center">帮助中心</string>
    <string name="more_share">转发好友</string>
    <string name="more_notice">关注我们</string>
    <string name="more_feedback">意见反馈</string>
    <string name="more_give_prise">给我鼓励</string>
    <string name="more_check_update">检查更新</string>
    <string name="more_current_version">当前版本</string>
    <string name="more_about">关于贷贷</string>
    <string name="more_exit">退出登录</string>
    <string name="login">登录</string>
    <string name="refresh">刷新</string>
    <string name="rmb">元</string>
    <string name="total_assets">总资产(元)</string>
    <string name="have_assets">持有资产(元)</string>
    <string name="account_balance">账户余额(元)</string>
    <string name="trade_record">交易记录</string>
    <string name="lookup_record">查看记录</string>
    <string name="total_points">总积分</string>
    <string name="points_unit">分</string>
    <string name="back">返回</string>
    <string name="read">已读</string>
    <string name="unread">未读</string>
    <string name="income">收益</string>
    <string name="total_income">累计收益</string>
    <string name="available_balance">可用余额(元)</string>
    <string name="withdraw_balance">提现中余额(元)</string>
    <string name="withdraw">提现</string>
    <string name="pay_detail">支出明细</string>
    <string name="income_detail">收入明细</string>
    <string name="points_store">积分商城</string>
    <string name="mine_points">我的积分</string>
    <string name="exchange">兑换</string>
    <string name="confirm">确定</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <!-- 产品详情 -->
    <string name="cancel">取消</string>
    <string name="fill_phone_num">填写手机号码</string>
    <string name="fill_verify_num">填写验证码</string>
    <string name="realname_auth">实名验证</string>
    <string name="fill_password">填写登陆密码</string>
    <string name="daidaitong">贷贷通社区</string>
    <string name="reget_verifycode">重新获取验证码</string>
    <string name="countdown_code">秒后重新获取</string>
    <string name="help">帮助</string>
    <string name="amonut_earn">累计收益（元）</string>
    <string name="amonut_point">总积分</string>
    <string name="point_title">积分</string>
    <string name="has_money">持有资产（元）</string>
    <!-- about -->
    <string name="about_desc">安于心理财，一款适合广大投资者使用的掌上理财软件，免费提供低门槛、操作简便、安全高效、收益稳定的理财产品及投资渠道、是国内领先的基于严格风险管理体系及互联网技术的金融信息服务平台，您可以随时、随地、轻松、安全地享受指尖上的财富增值体验！</string>
    <string name="about_welcome">欢迎页</string>
    <string name="about_title">关于安于心理财</string>
    <string name="about_phone">咨询热线：400-877-4188</string>
    <string name="about_qq">QQ:407375388</string>
    <string name="about_email">联系邮箱：407375388@qq.com</string>
    <string name="about_web">官方网站：www.fjajzc.com</string>
    <!-- 屏幕手势锁 -->
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    <!-- 账户中心 -->
    <string name="account">账户</string>
    <string name="account_center">账户中心</string>
    <string name="account_realname">实名认证</string>
    <string name="account_idcard">身份认证</string>
    <string name="account_bankcard">银行卡管理</string>
    <string name="account_change_psw">修改登录密码</string>
    <string name="account_change_trade">修改交易密码</string>
    <string name="account_open_gesture">开启手势</string>
    <string name="swicth_account">切换账户</string>
    <!-- 修改密码 -->
    <string name="reset_realname">真实姓名</string>
    <string name="user_idnum">身份证号码</string>
    <string name="user_name">用户名</string>
    <string name="message_vilate">短信验证码</string>
    <string name="get_imedil">立即获取</string>
    <string name="reset_login_psw">修改登录密码</string>
    <string name="reset_trade_psw">修改交易密码</string>
    <string name="next_step">下一步</string>
    <!-- share sdk -->
    <string name="sm_item_demo">接口</string>
    <string name="sm_item_auth">授权</string>
    <string name="sm_item_wechat">微信</string>
    <string name="sm_item_yixin">易信</string>
    <string name="sm_item_customer">自定义接口</string>
    <string name="sm_item_fl_weibo">关注新浪微博</string>
    <string name="sm_item_fl_tc">关注腾讯微博</string>
    <string name="sm_item_share_view">摇一摇截屏分享</string>
    <string name="sm_item_visit_website">关注官方网站</string>
    <string name="sm_item_about">Demo版本 Ver. %s</string>
    <string name="plz_choose_wechat">请选择微信客户端完成操作</string>
    <string name="get_token_format">获取%s的AccessToken</string>
    <string name="get_user_info_format">获取%s授权用户资料</string>
    <string name="get_other_info_format">获取%s其他用户资料</string>
    <string name="share_to_format">分享到%s</string>
    <string name="demo_share_all_gui">分享全部（有分享界面）</string>
    <string name="demo_share_all">分享全部（无界面，直接分享）</string>
    <string name="demo_get_access_token">获取AccessToken</string>
    <string name="demo_get_my_info">获取授权用户资料</string>
    <string name="demo_get_other_info">获取其他用户资料</string>
    <string name="get_sina_friends_list">获取新浪微博关注列表</string>
    <string name="get_tencent_friends_list">获取腾讯微博关注列表</string>
    <string name="customer_douban">搜索用户</string>
    <string name="customer_facebook">获取通知列表</string>
    <string name="customer_nemb">获取推荐话题</string>
    <string name="customer_renren">上传照片到用户的相册</string>
    <string name="customer_sina">获取微博主页列表</string>
    <string name="customer_qzone">发表日志到QQ空间</string>
    <string name="customer_tencent">获取我的粉丝列表</string>
    <string name="customer_twitter">获取主页列表</string>
    <string name="customer_kaixin">获取可能认识的人</string>
    <string name="customer_sohu">获取好友列表</string>
    <string name="customer_youdao">获取笔记本列表</string>
    <string name="customer_suishenkan">获取搜狐随身看书签列表</string>
    <string name="customer_tumblr">获取Tumblr用户Post列表</string>
    <string name="not_yet_authorized">尚未授权</string>
    <string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://mob.com @Mob移动开发者服务平台</string>
    <string name="share_content_short">ShareSDK不仅集成简单、支持如微信、新浪微博、腾讯微博等平台，还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://mob.com @Mob移动开发者服务平台</string>
    <string name="evenote_title">ShareSDK是一个神奇的SDK</string>
    <string name="update">文字分享</string>
    <string name="image_upload">图片分享（本地图片）</string>
    <string name="image_upload_bitmap">图片分享（Bitmap对象）</string>
    <string name="image_upload_url">图片分享（网络图片）</string>
    <string name="emoji_upload">表情分享（本地图片）</string>
    <string name="emoji_upload_url">表情分享（网络图片）</string>
    <string name="emoji_upload_bm">表情分享（Bitmap对象）</string>
    <string name="music_upload">音乐分享</string>
    <string name="video_upload">视频分享</string>
    <string name="webpage_upload">网页分享（本地图片）</string>
    <string name="webpage_upload_bitmap">网页分享（Bitmap对象）</string>
    <string name="webpage_upload_url">网页分享（网络图片）</string>
    <string name="app_upload">应用分享（携带文件）</string>
    <string name="app_upload_extinfo">应用分享（携带脚本）</string>
    <string name="file_upload">文件分享</string>
    <string name="share_to_wechat">微信好友</string>
    <string name="share_to_moment">微信朋友圈</string>
    <string name="share_to_favorite">微信收藏</string>
    <string name="wechat_demo_title">微信分享Demo标题</string>
    <string name="qzone_add_blog_sample"><h1>QQ互联</h1><font color="red">轻松分享,</font><font color="green">快乐生活。</font><a href="http://connect.qq.com">详情请看。</a><img src="http://imgcache.qq.com/ptlogin/head/1_100.gif"></img></string>
    <string name="wechat_client_is_not_installed_correctly">微信客户端未安装或版本太旧</string>
    <string name="wechat_client_not_support_following_operation">微信客户端不支持第三方应用执行关注功能</string>
    <string name="share_to_yixin">易信好友</string>
    <string name="share_to_yixin_moment">易信朋友圈</string>
    <string name="share_to_yixin_favorite">易信收藏</string>
    <string name="yixin_demo_title">易信分享Demo标题</string>
    <string name="receive_rewards">恭喜你得到%s个金币！</string>
    <string name="buy_success">购买成功</string>
    <string name="buy_failed">购买失败</string>
    <string name="laiwang">来往</string>
    <string name="qzone_customer_share_style">自定义QQ空间分享风格</string>
    <string name="qq_share_way">请选择分享方式</string>
    <string name="qq_share_from_qqlogin">QQ/QZone登录发微博</string>
    <string name="qq_share_from_tlogin">腾讯微博登录发微博</string>
    <!-- 添加银行卡 -->
    <string name="add_bank">添加银行卡</string>
</resources>