<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/common_title" />
    <ScrollView style="@style/Width_match_height_match" >
        <LinearLayout
            style="@style/Width_match_height_match"
            android:orientation="vertical" >
            <LinearLayout
                style="@style/Width_match_height_wrap"
                android:orientation="vertical" >
                <LinearLayout
                    android:id="@+id/more_user_center"
                    style="@style/MoreListItem" >
                    <ImageView
                        android:id="@+id/action_center"
                        style="@style/Width_wrap_height_wrap"
                        android:src="@drawable/more_action_center_icon" />
                    <LinearLayout
                        style="@style/Width_wrap_height_wrap"
                        android:layout_weight="1"
                        android:gravity="center_vertical" >
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            style="@style/Width_wrap_height_wrap"
                            android:text="@string/more_action_center" />
                    </LinearLayout>
                    <ImageView
                        style="@style/Width_wrap_height_wrap"
                        android:src="@drawable/btn_right_arrow" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/more_message_center"
                    style="@style/MoreListItem" >
                    <ImageView
                        style="@style/Width_wrap_height_wrap"
                        android:src="@drawable/more_message_center_icon" />
                    <LinearLayout
                        style="@style/Width_wrap_height_wrap"
                        android:layout_weight="1"
                        android:gravity="center_vertical" >
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            style="@style/Width_wrap_height_wrap"
                            android:text="@string/more_message_center" />
                    </LinearLayout>
                    <ImageView
                        style="@style/Width_wrap_height_wrap"
                        android:src="@drawable/btn_right_arrow" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/more_help_center"
                    style="@style/MoreListItem" >
                    <ImageView
                        style="@style/Width_wrap_height_wrap"
                        android:src="@drawable/more_help_icon" />
                    <LinearLayout
                        style="@style/Width_wrap_height_wrap"
                        android:layout_weight="1"
                        android:gravity="center_vertical" >
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            style="@style/Width_wrap_height_wrap"
                            android:text="@string/more_help_center" />
                    </LinearLayout>
                    <ImageView
                        style="@style/Width_wrap_height_wrap"
                        android:src="@drawable/btn_right_arrow" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/Width_match_height_wrap"
                android:orientation="vertical" >
                <LinearLayout
                    style="@style/MoreListItem" >
                    <TextView
                        android:id="@+id/more_share" 
                        style="@style/MoreItem"
                        android:text="@string/more_share"
                        android:drawableLeft="@drawable/more_to_friends_icon"/>
                    <TextView
                        android:id="@+id/more_attention" 
                        style="@style/MoreItem"
                        android:text="@string/more_notice"
                        android:drawableLeft="@drawable/more_attention_us_icon"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/Width_match_height_wrap" >
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="#333"/>
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="#333"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/MoreListItem" >
                    <TextView 
                        android:id="@+id/more_feedback" 
                        style="@style/MoreItem"
                        android:text="@string/more_feedback"
                        android:drawableLeft="@drawable/more_feedback_icon"/>
                    <TextView 
                        android:id="@+id/more_rate" 
                        style="@style/MoreItem"
                        android:text="@string/more_give_prise"
                        android:drawableLeft="@drawable/more_rate_icon"/>
            </LinearLayout>
            <LinearLayout
                style="@style/Width_match_height_wrap"
                android:orientation="vertical" >
                <LinearLayout
                    android:id="@+id/check_update_llyt"
                    style="@style/MoreListItem" >
                    <ImageView
                        android:id="@+id/check_update"
                        style="@style/Width_wrap_height_wrap"
                        android:src="@drawable/more_check_update_icon" />
                    <LinearLayout
                        style="@style/Width_wrap_height_wrap"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >
                        <TextView
                            style="@style/Width_wrap_height_wrap"
                            
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/more_check_update" />
                        <TextView
                            style="@style/Width_wrap_height_wrap"
                            android:text="@string/more_current_version" />
                    </LinearLayout>
                    <ImageView
                        style="@style/Width_wrap_height_wrap"
                        android:src="@drawable/btn_right_arrow" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/more_about"
                    style="@style/MoreListItem" >
                    <ImageView
                        style="@style/Width_wrap_height_wrap"
                        android:src="@drawable/more_about_us_icon" />
                    <LinearLayout
                        style="@style/Width_wrap_height_wrap"
                        android:layout_weight="1"
                        android:gravity="center_vertical" >
                        <TextView
                            style="@style/Width_wrap_height_wrap"
                            android:layout_marginLeft="10dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/more_about" />
                    </LinearLayout>
                    <ImageView
                        style="@style/Width_wrap_height_wrap"
                        android:src="@drawable/btn_right_arrow" />
                </LinearLayout>
                <Button
                    android:id="@+id/more_exit" 
                    android:text="@string/more_exit"
                    style="@style/Width_match_height_wrap" 
                    />
            </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>