<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/common_title" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg" >
        <ImageView
            android:id="@+id/left_img_account"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_user_header" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/left_img_account"
            android:text="@string/account"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/account_name"
            style="@style/Width_wrap_height_wrap"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg" >
        <ImageView
            android:id="@+id/left_img_realname"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_validate" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/left_img_realname"
            android:text="@string/account_realname"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/account_realname"
            style="@style/Width_wrap_height_wrap"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff" >
        <ImageView
            android:id="@+id/left_img_userid"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_idcard" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/left_img_userid"
            android:text="@string/account_idcard"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/account_userid"
            style="@style/Width_wrap_height_wrap"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#d9d9d9" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/account_bankcard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg" >
        <ImageView
            android:id="@+id/left_img_bank"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_bank_card_manage" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/left_img_bank"
            android:text="@string/account_bankcard"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/account_bank"
            style="@style/Width_wrap_height_wrap"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:drawableRight="@drawable/ic_right_arraw"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg" >
        <ImageView
            android:id="@+id/left_img_change"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_trade_password" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/left_img_change"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/account_change_psw"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_right_arraw"
                android:gravity="center_vertical|left"
                android:paddingRight="16dp"
                android:text="@string/account_change_psw" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:background="#d9d9d9" />
            <TextView
                android:id="@+id/account_change_trade_psw"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_right_arraw"
                android:gravity="center_vertical|left"
                android:paddingRight="16dp"
                android:text="@string/account_change_trade" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg" >
        <ImageView
            android:id="@+id/left_img_open"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_open_password" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/left_img_open"
            android:text="@string/account_open_gesture"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <CheckBox
            android:id="@+id/account_open_toggle"
            style="@style/Width_wrap_height_wrap"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/open_gesture"
            android:button="@null"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>
</LinearLayout>